[tool.poetry]
name = "stockpricepredictionai"
version = "0.1.0"
description = ""
authors = ["Nils <63423070+nilsbar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.33"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
