[tool.poetry]
name = "stockpricepredictionai"
version = "0.1.0"
description = "The aim is to create a full model lifecycle for a stock price prediction."
authors = ["Nils <63423070+nilsbar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.14.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
