[tool.poetry]
name = "stockpricepredictionai"
version = "0.1.0"
description = "The aim is to create a full model lifecycle for a stock price prediction."
authors = ["Nils <63423070+nilsbar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tensorflow-io-gcs-filesystem = "^0.31.0"
tensorflow = "^2.14.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"
yfinance = "^0.2.33"
ipykernel = "^6.27.1"
pytest = "^7.4.3"
pytest-lazy-fixture = "^0.6.3"
black = "^23.12.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
ruff = "^0.1.9"
pre-commit = "^3.6.0"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
